tests/ui/borrowck/borrowck-issue-48962.stderr
error[E0382]: use of moved value: `src`
  --> $DIR/borrowck-issue-48962.rs:14:5
   |
LL |     let mut src = &mut node;
   |         ------- move occurs because `src` has type `&mut Node`, which does not implement the `Copy` trait
LL |     {src};
   |      --- value moved here
LL |     src.next = None;
   |     ^^^^^^^^ value used here after move

error[E0382]: use of moved value: `src`
  --> $DIR/borrowck-issue-48962.rs:20:5
   |
LL |     let mut src = &mut (22, 44);
   |         ------- move occurs because `src` has type `&mut (i32, i32)`, which does not implement the `Copy` trait
LL |     {src};
   |      --- value moved here
LL |     src.0 = 66;
   |     ^^^^^^^^^^ value used here after move

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
